Fix map not panned around on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,8 +44,9 @@ body.has-active-menu {
 	}
 	#hamburger-menu {
 		cursor: pointer;
-	  position: relative;
-		margin: 1px 15px 20px 20px;
+	  position: absolute;
+		margin-top: -9px;
+		margin-left: 20px;
 		padding-left: 1.25em;
 	}
 	#hamburger-menu:before {
@@ -57,6 +58,9 @@ body.has-active-menu {
 	  height: 0.125em;
 	  border-top: 0.375em double #000;
 	  border-bottom: 0.125em solid #000;
+	}
+	#pac-input {
+		margin-left: 55px;
 	}
   .menu-slide-left {
     max-width: 300px;
